# simple_mobile_robot_ros1

./: CMakeLists.txt  README.md  Ru.md  package.xml
config/: pid_params.yaml  robot_driver.yaml  robot_joint_state.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Ru.md
launch/: gazebo.launch  robot_base copy.launch  robot_base.launch  rviz.launch  test.launch
models/my_model/: model.config  model.sdf
models/my_model/materials/scripts/: my_material.material
models/my_model/meshes/: shelf_pin.stl
scripts/: camera_view.py  class_example_cv.py
src/: main.cpp  simple_controller.cpp
urdf/: camera.xacro  common_macro.xacro  control_block.xacro  corpus.xacro  main.xacro  wheel.xacro
world/: empty_world.world  map_ground.material
